// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContactLine - snapshots ContactLine no month header, protected 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
  testID="vt-2"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "zIndex": 999,
      }
    }
  >
    <View
      collapsable={false}
      handlerTag={4}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        {
          "overflow": "hidden",
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#040C17",
              "flexDirection": "row",
              "justifyContent": "center",
              "transform": [
                {
                  "translateX": -67,
                },
              ],
            }
          }
        />
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "flexDirection": "row-reverse",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#040C17",
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "transform": [
                {
                  "translateX": 525,
                },
              ],
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "flex-start",
                "width": 525,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "flex-start",
                  "opacity": 1,
                  "padding": 20,
                  "zIndex": 999,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      576,
                      512,
                      [
                        128490,
                        61670,
                      ],
                      "f086",
                      "M384 144c0 97.2-86 176-192 176-26.7 0-52.1-5-75.2-14L35.2 349.2c-9.3 4.9-20.7 3.2-28.2-4.2s-9.2-18.9-4.2-28.2l35.6-67.2C14.3 220.2 0 183.6 0 144 0 46.8 86-32 192-32S384 46.8 384 144zm0 368c-94.1 0-172.4-62.1-188.8-144 120-1.5 224.3-86.9 235.8-202.7 83.3 19.2 145 88.3 145 170.7 0 39.6-14.3 76.2-38.4 105.6l35.6 67.2c4.9 9.3 3.2 20.7-4.2 28.2s-18.9 9.2-28.2 4.2L459.2 498c-23.1 9-48.5 14-75.2 14z",
                    ],
                    "iconName": "comments",
                    "prefix": "fas",
                  }
                }
                size={30}
                style={
                  {
                    "opacity": 0.8,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        collapsable={false}
        enabled={false}
        handlerTag={3}
        handlerType="TapGestureHandler"
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        pointerEvents="auto"
        style={
          {
            "transform": [
              {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "borderBottomColor": "#ffffff",
              "borderBottomWidth": 1.5,
              "display": "flex",
              "marginTop": 15,
              "paddingBottom": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "minWidth": 50,
                  "width": "10%",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FF5733",
                    "borderColor": "#888888",
                    "borderRadius": 22,
                    "borderWidth": 2,
                    "height": 40,
                    "justifyContent": "center",
                    "marginLeft": 5,
                    "marginRight": 5,
                    "marginTop": 0,
                    "width": 40,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#000000",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    }
                  }
                >
                  A
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "display": "flex",
                  "maxWidth": "85%",
                  "width": "85%",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "opacity": 1,
                    }
                  }
                >
                  Alice
                </Text>
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "opacity": 0.65,
                    }
                  }
                >
                  Jan 1, 12:00 am
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "flex-start",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    {
                      "color": "#c3c3c3",
                      "maxWidth": "85%",
                      "opacity": 0.65,
                      "width": "85%",
                    }
                  }
                >
                  Hello there
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <
                      color="#18bd18"
                      icon={
                        {
                          "icon": [
                            512,
                            512,
                            [
                              61533,
                              "check-circle",
                            ],
                            "f058",
                            "M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z",
                          ],
                          "iconName": "circle-check",
                          "prefix": "fas",
                        }
                      }
                      size={12}
                      style={
                        {
                          "marginLeft": 5,
                          "marginRight": 1,
                          "marginTop": 2,
                        }
                      }
                    />
                    <
                      color="#18bd18"
                      icon={
                        {
                          "icon": [
                            512,
                            512,
                            [
                              61533,
                              "check-circle",
                            ],
                            "f058",
                            "M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z",
                          ],
                          "iconName": "circle-check",
                          "prefix": "fas",
                        }
                      }
                      size={12}
                      style={
                        {
                          "marginLeft": 1,
                          "marginRight": 0,
                          "marginTop": 2,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ContactLine - snapshots ContactLine with month header 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
  testID="vt-1"
>
  <View
    style={
      {
        "backgroundColor": "#011401",
        "borderBottomWidth": 1,
        "borderColor": "#011401",
        "borderTopWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 15,
        "paddingTop": 5,
      }
    }
  >
    <Text
      style={
        {
          "color": "#c3c3c3",
          "opacity": 0.65,
        }
      }
    >
      January 2024
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "zIndex": 999,
      }
    }
  >
    <View
      collapsable={false}
      handlerTag={2}
      handlerType="PanGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onLayout={[Function]}
      style={
        {
          "overflow": "hidden",
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#040C17",
              "flexDirection": "row",
              "justifyContent": "center",
              "transform": [
                {
                  "translateX": -67,
                },
              ],
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": 67,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                  "padding": 20,
                  "zIndex": 999,
                }
              }
            >
              <
                color="#18bd18"
                icon={
                  {
                    "icon": [
                      576,
                      512,
                      [
                        61913,
                      ],
                      "f1d8",
                      "M536.4-26.3c9.8-3.5 20.6-1 28 6.3s9.8 18.2 6.3 28l-178 496.9c-5 13.9-18.1 23.1-32.8 23.1-14.2 0-27-8.6-32.3-21.7l-64.2-158c-4.5-11-2.5-23.6 5.2-32.6l94.5-112.4c5.1-6.1 4.7-15-.9-20.6s-14.6-6-20.6-.9L229.2 276.1c-9.1 7.6-21.6 9.6-32.6 5.2L38.1 216.8c-13.1-5.3-21.7-18.1-21.7-32.3 0-14.7 9.2-27.8 23.1-32.8l496.9-178z",
                    ],
                    "iconName": "paper-plane",
                    "prefix": "fas",
                  }
                }
                size={30}
              />
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "flexDirection": "row-reverse",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": -10000,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#040C17",
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "transform": [
                {
                  "translateX": 525,
                },
              ],
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "flex-start",
                "width": 525,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "flex-start",
                  "opacity": 1,
                  "padding": 20,
                  "zIndex": 999,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      576,
                      512,
                      [
                        128490,
                        61670,
                      ],
                      "f086",
                      "M384 144c0 97.2-86 176-192 176-26.7 0-52.1-5-75.2-14L35.2 349.2c-9.3 4.9-20.7 3.2-28.2-4.2s-9.2-18.9-4.2-28.2l35.6-67.2C14.3 220.2 0 183.6 0 144 0 46.8 86-32 192-32S384 46.8 384 144zm0 368c-94.1 0-172.4-62.1-188.8-144 120-1.5 224.3-86.9 235.8-202.7 83.3 19.2 145 88.3 145 170.7 0 39.6-14.3 76.2-38.4 105.6l35.6 67.2c4.9 9.3 3.2 20.7-4.2 28.2s-18.9 9.2-28.2 4.2L459.2 498c-23.1 9-48.5 14-75.2 14z",
                    ],
                    "iconName": "comments",
                    "prefix": "fas",
                  }
                }
                size={30}
                style={
                  {
                    "opacity": 0.8,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
        />
      </View>
      <View
        collapsable={false}
        enabled={false}
        handlerTag={1}
        handlerType="TapGestureHandler"
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        pointerEvents="auto"
        style={
          {
            "transform": [
              {
                "translateX": 0,
              },
            ],
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "borderBottomColor": "#ffffff",
              "borderBottomWidth": 1.5,
              "display": "flex",
              "marginTop": 15,
              "paddingBottom": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "minWidth": 50,
                  "width": "10%",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FF5733",
                    "borderColor": "#888888",
                    "borderRadius": 22,
                    "borderWidth": 2,
                    "height": 40,
                    "justifyContent": "center",
                    "marginLeft": 5,
                    "marginRight": 5,
                    "marginTop": 0,
                    "width": 40,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#000000",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    }
                  }
                >
                  A
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "display": "flex",
                  "maxWidth": "85%",
                  "width": "85%",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "opacity": 1,
                    }
                  }
                >
                  Alice
                </Text>
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "opacity": 0.65,
                    }
                  }
                >
                  Jan 1, 12:00 am
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "flex-start",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    {
                      "color": "#c3c3c3",
                      "maxWidth": "85%",
                      "opacity": 0.65,
                      "width": "85%",
                    }
                  }
                >
                  Hello there
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <
                      color="#18bd18"
                      icon={
                        {
                          "icon": [
                            512,
                            512,
                            [
                              61533,
                              "check-circle",
                            ],
                            "f058",
                            "M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z",
                          ],
                          "iconName": "circle-check",
                          "prefix": "fas",
                        }
                      }
                      size={12}
                      style={
                        {
                          "marginLeft": 5,
                          "marginRight": 1,
                          "marginTop": 2,
                        }
                      }
                    />
                    <
                      color="#18bd18"
                      icon={
                        {
                          "icon": [
                            512,
                            512,
                            [
                              61533,
                              "check-circle",
                            ],
                            "f058",
                            "M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z",
                          ],
                          "iconName": "circle-check",
                          "prefix": "fas",
                        }
                      }
                      size={12}
                      style={
                        {
                          "marginLeft": 1,
                          "marginRight": 0,
                          "marginTop": 2,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
